# sightsweep

./: .gitignore  README.md  main.py  pyproject.toml
data/: download-dataset.sh
src/sightsweep/: app_config.yaml  conv_autoencoder.py  dataset.py  inpainting_module.py  interface.py  sam_predictor_module.py  train.py  ui.py
src/sightsweep/models/: __init__.py  conv_autoencoder.py  mat.py  vae.py
